# Njordr

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  release.yaml
docs/source/: conf.py  index.rst
njordr/: config.py  main.py  proto.py  url_state_handler.py
njordr/lib/: proto.py
njordr/service/: config.py  main.py  url_state_handler.py
njordr_service/: logging_config.json  main.py  url_state_handler.py
requirements/: dev.txt  prod.txt
tests/: test_url_handler.py
