[tool.poetry]
name = "njordr_service"
version = "0.1.0"
package-mode = false
description = "messenger_to_service_proxy"
authors = ["Dima Kushchevskyi <d.kushchevskyi@sirinsoftware.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
fastapi = "^0.110.0"
aiogram = "^3.4.1"
roothazardlib = "^1.6"
njordr = "^1.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
mypy = "^1.8.0"

# python3 -m pylint `find njordr_service -name "*.py"`
# python3 -m mypy `find njordr_service -name "*.py"`

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
